--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,14 @@
 {
-  "name": "FireChat",
-  "short_name": "FireChat",
-  "start_url": "/index.html",
-  "display": "standalone",
-  "orientation": "portrait"
+    "name": "FireChat",
+    "short_name": "FireChat",
+    "start_url": "/index.html",
+    "display": "standalone",
+    "orientation": "portrait",
+	"background_color": "#fff",
+	"theme_color": "aliceblue",
+	"description": "A simply chat web app with firebse.",
+	"related_applications": [{
+		"platform": "web",
+		"url": "https://rishinc.com/firebase"
+	}]
 }
