--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,28 @@
     "orientation": "portrait",
 	"background_color": "#fff",
 	"theme_color": "aliceblue",
-	"description": "A simply readable Hacker News app.",
+	"description": "Chat application build with firebase.",
+	"icons": [{
+    "src": "images/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    }, {
+      "src": "images/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    }, {
+      "src": "images/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    }, {
+      "src": "images/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }, {
+      "src": "images/icons/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    }],
 	"related_applications": [{
 		"platform": "web",
 		"url": "https://rishinc.com/firebase"
