--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "friendlychat-codelab",
-  "description": "Firebase SDK for Cloud Functions codelab",
+  "name": "FrieChat",
+  "description": "Firebase SDK for chatting app",
   "dependencies": {
     "firebase-admin": "^4.1.1",
     "firebase-functions": "^0.5.1"
